# cic_mc1

./: .gitignore  cic_mc1.ipynb  pyproject.toml  readme.md
export/: stock_analysis_results.csv  stock_analysis_results_0.csv  stock_analysis_results_1.csv  stock_analysis_results_2.csv  stock_analysis_results_3.csv  stock_analysis_results_4.csv  stock_analysis_results_5.csv  stock_analysis_results_6.csv  stock_analysis_results_7.csv  stock_analysis_results_8.csv
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
